implementado endpoint GET /installations/:id
