# src/routes/installations.routes.js
@@ -1,6 +1,12 @@
 const express = require('express');
-const { getAllInstallations } = require('../controllers/installations.controller');
+const {
+    getAllInstallations,
+    getInstallationById
+} = require('../controllers/installations.controller');
+
 const router = express.Router();
 
 router.get('/', getAllInstallations);
+router.get('/:id', getInstallationById);
+
 module.exports = router;
